--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -1,4 +1,15 @@
 <!DOCTYPE html>
+
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+Du är inloggad som <span th:text="${user}"></span>
+</body>
+</html>
+
 <html lang="sv"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
@@ -12,6 +23,7 @@
     <script src="/js/modal.js"></script>
 
 </th:block>
+
 
 <!--    <header>-->
 <!--        <div class="content">-->
